Fix for wave div centering on safari
For some reason justify-content: center on the wave div wasn't working
on safari browsers. This just moves waves over a bit. Seems to work on
both chrome & safari.

--- a/web_client/src/MechanicalTheatre.css
+++ b/web_client/src/MechanicalTheatre.css
@@ -82,12 +82,12 @@
 
 @keyframes wavesAni {
   0% {
-    left: -25px;
+    left: -50px;
   }
   50% {
-    left: 25px;
+    left: -0px;
   }
   100% {
-      left: -25px;
+      left: -50px;
   }
 }
